crates/fakeable_impl/tests/snapshots/fakeable_impl__output_verification__fakeable_on_impl_with_mockall_preserves_async_where_clause.snap
---
source: crates/fakeable_impl/src/../tests/output_verification.rs
expression: "testing_aids :: render_expansion(&result)"
---
impl __fakeable__MyService::MyService {
    pub async fn process<T>(&self, value: T) -> T
    where
        T: Send + 'static,
    {
        value
    }
}
impl MyService {
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub async fn process<T>(&self, value: T) -> T
    where
        T: Send + 'static,
    {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.process::<T>(value).await
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.process::<T>(value).await
            }
        }
    }
}
#[cfg(any(feature = "test-util", test))]
#[allow(clippy::all)]
#[allow(clippy::pedantic)]
#[allow(clippy::style)]
pub mod fakes {
    use super::*;
    ::mockall::mock! {
        #[derive(Debug)] pub MyService { pub fn process < T > (& self, value : T) -> impl
        ::std::future::Future < Output = T > + Send where T : Send + 'static,; }
    }
}
