crates/fakeable_impl/tests/snapshots/fakeable_impl__output_verification__fakeable_on_impl_with_ref_receiver_returning_self_generates_expected_code.snap
---
source: crates/fakeable_impl/src/../tests/output_verification.rs
expression: "testing_aids :: render_expansion(&result)"
---
impl __fakeable__MyService::MyService {
    pub fn new(value: String) -> Self {
        Self { value }
    }
    pub fn special_clone(&self) -> Self {
        Self { value: self.value.clone() }
    }
    pub async fn async_clone(&self) -> Self {
        Self { value: self.value.clone() }
    }
    pub fn mut_transform(&mut self) -> Self {
        Self { value: self.value.clone() }
    }
    pub fn get_value(&self) -> &str {
        &self.value
    }
}
impl MyService {
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn new(value: String) -> Self {
        Self {
            inner: __fakeable__MyService::Enum::Real(
                <__fakeable__MyService::MyService>::new(value),
            ),
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn special_clone(&self) -> Self {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                Self {
                    inner: __fakeable__MyService::Enum::Real(
                        __fakeable_real.special_clone(),
                    ),
                }
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                Self {
                    inner: __fakeable__MyService::Enum::Fake(
                        __fakeable_fake.special_clone(),
                    ),
                }
            }
        }
    }
    #[allow(
        clippy::future_not_send,
        reason = "fake delegation preserves the future sendability of both real and fake implementations"
    )]
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub async fn async_clone(&self) -> Self {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                Self {
                    inner: __fakeable__MyService::Enum::Real(
                        __fakeable_real.async_clone().await,
                    ),
                }
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                Self {
                    inner: __fakeable__MyService::Enum::Fake(
                        __fakeable_fake.async_clone().await,
                    ),
                }
            }
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn mut_transform(&mut self) -> Self {
        match &mut self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                Self {
                    inner: __fakeable__MyService::Enum::Real(
                        __fakeable_real.mut_transform(),
                    ),
                }
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                Self {
                    inner: __fakeable__MyService::Enum::Fake(
                        __fakeable_fake.mut_transform(),
                    ),
                }
            }
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn get_value(&self) -> &str {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.get_value()
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.get_value()
            }
        }
    }
}
