crates/fakeable_impl/tests/snapshots/fakeable_impl__output_verification__fakeable_on_trait_impl_generated_expected_code.snap
---
source: crates/fakeable_impl/src/../tests/output_verification.rs
expression: "testing_aids :: render_expansion(&result)"
---
impl Service for __fakeable__MyService::MyService {
    type Output = Something;
    const NAME: &'static str = "my-service";
    fn create(something: Something) -> Self {
        Self { something }
    }
    fn output(&self) -> &Something {
        &self.something
    }
    fn duplicate(&self) -> Self {
        Self {
            something: self.something.clone(),
        }
    }
}
impl Service for MyService {
    type Output = Something;
    const NAME: &'static str = "my-service";
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    fn create(something: Something) -> Self {
        Self {
            inner: __fakeable__MyService::Enum::Real(
                <__fakeable__MyService::MyService as Service>::create(something),
            ),
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    fn output(&self) -> &Something {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                <__fakeable__MyService::MyService as Service>::output(__fakeable_real)
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.output()
            }
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    fn duplicate(&self) -> Self {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                Self {
                    inner: __fakeable__MyService::Enum::Real(
                        <__fakeable__MyService::MyService as Service>::duplicate(
                            __fakeable_real,
                        ),
                    ),
                }
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                Self {
                    inner: __fakeable__MyService::Enum::Fake(__fakeable_fake.duplicate()),
                }
            }
        }
    }
}
